[package]
name = "obsidian-export"
version = "22.11.0"
authors = ["Nick Groenen <nick@groenen.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zoni/obsidian-export"
documentation = "https://docs.rs/obsidian-export"
description = """
Rust library and associated CLI program to export an Obsidian vault to regular Markdown.
"""
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "obsidian"]

[lib]
name = "obsidian_export"
path = "src/lib.rs"

[[bin]]
name = "obsidian-export"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
gumdrop = "0.8.1"
ignore = "0.4.20"
lazy_static = "1.4.0"
matter = "0.1.0-alpha4"
pathdiff = "0.2.1"
percent-encoding = "2.3.0"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.0"
rayon = "1.8.0"
regex = "1.10.2"
serde_yaml = "0.9.25"
slug = "0.1.5"
snafu = "0.7.5"
unicode-normalization = "0.1.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tempfile = "3.8.0"
walkdir = "2.4.0"
