[package]
name = "obsidian-export"
version = "23.12.0"
authors = ["Nick Groenen <nick@groenen.me>"]
edition = "2018"
license = "BSD-2-Clause-Patent"
readme = "README.md"
repository = "https://github.com/zoni/obsidian-export"
documentation = "https://docs.rs/obsidian-export"
description = """
Rust library and associated CLI program to export an Obsidian vault to regular Markdown.
"""
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "obsidian"]

[lib]
name = "obsidian_export"
path = "src/lib.rs"

[[bin]]
name = "obsidian-export"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.9"
gumdrop = "0.8.1"
ignore = "0.4.21"
lazy_static = "1.4.0"
matter = "0.1.0-alpha4"
pathdiff = "0.2.1"
percent-encoding = "2.3.1"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.2"
rayon = "1.8.0"
regex = "1.10.4"
serde_yaml = "0.9.27"
slug = "0.1.5"
snafu = "0.7.5"
unicode-normalization = "0.1.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tempfile = "3.8.1"
walkdir = "2.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
	#"aarch64-unknown-linux-gnu", # Not yet supported (2023-12-03)
	"x86_64-unknown-linux-gnu",
	#"x86_64-unknown-linux-musl",
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	# "aarch64-pc-windows-msvc",, # Not yet supported (2023-12-03)
	"x86_64-pc-windows-msvc",
]
unix-archive = ".tar.xz"
windows-archive = ".zip"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["./publish-crate"]
